--- a/Trial/Questions/Question 2/Question.html
+++ b/Trial/Questions/Question 2/Question.html
@@ -1,11 +1,14 @@
 <HTML>
 <HEAD>
- <TITLE>Question 1</TITLE>
+ <TITLE>Question 2</TITLE>
 </HEAD>
 
 <BODY>
  <P>
- Sample Question 2
+ <h3>On SDS-PAGE electrophoresis, protein sample A shows a band at 80kDa.
+  <br/>Protein sample B shows a band at 40kDa. A mixture of A and B shows only one band at 40kDa. What is an
+  explanation?
+ </h3>
  </P>
 </BODY>
 </HTML>
